@@ -68,7 +68,16 @@ Ice::ConnectionI::validate()
 		return;
 	    }
 	    
-	    assert(_state == StateNotValidated);
+	    //
+	    // The connection might already be closed (e.g.: the communicator 
+	    // was destroyed or object adapter deactivated.)
+	    //
+	    assert(_state == StateNotValidated || _state == StateClosed);
+	    if(_state == StateClosed)
+	    {
+		assert(_exception.get());
+		_exception->ice_throw();
+	    }
 	    
 	    if(_adapter)
 	    {
